feat(images): add Boulder Media logo to company carousel
- Add Boulder_Media.png to static/images/
- Update company logos section in index.html
- Maintain consistent branding with other company logos

--- a/templates/index.html
+++ b/templates/index.html
@@ -140,6 +140,8 @@
                          alt="GameCity Kajaani" class="company-logo">
                     <img src="{{ url_for('static', filename='images/Overwatch_2_logo.svg.png') }}" 
                          alt="Overwatch 2" class="company-logo">
+                    <img src="{{ url_for('static', filename='images/Boulder_Media.png') }}" 
+                         alt="Boulder Media" class="company-logo">
                     <!-- Duplicate logos for seamless loop -->
                     <img src="{{ url_for('static', filename='images/Walt_Disney_Animation_Studios_logo.svg.png') }}" 
                          alt="Disney Animation Studios" class="company-logo">
@@ -151,6 +153,8 @@
                          alt="GameCity Kajaani" class="company-logo">
                     <img src="{{ url_for('static', filename='images/Overwatch_2_logo.svg.png') }}" 
                          alt="Overwatch 2" class="company-logo">
+                    <img src="{{ url_for('static', filename='images/Boulder_Media.png') }}" 
+                         alt="Boulder Media" class="company-logo">
                 </div>
             </div>
         </div>
