feat(site): remove Promotion Vault reference from current status

--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
                     and <em>Garfield</em>. I know exactly what studios are looking for because I've been in the trenches.
                 </p>
                 <div class="current-status">
-                    <p><strong>Currently:</strong> Mentoring with GameCity Kajaani and working with Promotion Vault</p>
+                    <p><strong>Currently:</strong> Mentoring with GameCity Kajaani</p>
                 </div>
                 <div style="text-align: center; margin-top: 30px;">
                     <a href="#contact" class="cta-button">Book Your Free Strategy Call</a>
