--- a/templates/index.html
+++ b/templates/index.html
@@ -262,7 +262,7 @@
                     </svg>
                     toucan.sg@gmail.com
                 </a>
-                <a href="https://linkedin.com/in/sreyeesh-garimella" class="footer-social-link" target="_blank">
+                <a href="www.linkedin.com/in/sreyeeshgarimella" class="footer-social-link" target="_blank">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                         <rect x="2" y="9" width="4" height="12"></rect>
