--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -35,7 +35,14 @@
         <div class="blog-share">
             <span>Share:</span>
             <a href="https://twitter.com/intent/tweet?text={{ post.title | urlencode }}&url={{ canonical_url | urlencode }}" target="_blank" rel="noreferrer noopener">X (Twitter)</a>
-            <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ canonical_url | urlencode }}" target="_blank" rel="noreferrer noopener">LinkedIn</a>
+            <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ canonical_url | urlencode }}" target="_blank" rel="noreferrer noopener">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+                    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                    <rect x="2" y="9" width="4" height="12"></rect>
+                    <circle cx="4" cy="4" r="2"></circle>
+                </svg>
+                LinkedIn
+            </a>
         </div>
         <a class="back-to-blog" href="{{ blog_index_href }}">← Back to all posts</a>
     </footer>
